# YTB-playlist-downloader

./: .gitignore  Cargo.toml  README.md  config.toml  playlist.toml
src/: config_manager.rs  database.rs  downloader.rs  lib.rs  main.rs
